# streak-cli

./: .gitignore  CHANGELOG.md  PROJECT_LOG.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: tests.yml
src/streak/: __main__.py  commands.py  main.py  storage.py
src/streak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_commands.py  test_integration_cli.py  test_storage.py  test_streaks.py
